2016-02-01  Nikolaus Waxweiler  <madigens@gmail.com>

	[ftview] Fix toggling of `force auto-hinter' in light mode.

	Light mode does not imply auto-hinter anymore.

	* src/ftview.c (Process event) <'f'>: Update code.

2016-01-17  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftdiff.c (render_state_init): Update default LCD filter.

2016-01-14  Werner Lemberg  <wl@gnu.org>

	Don't use macro names that start with `_[A-Z]' or contain `__'.

	Such macro names are reserved for both C and C++.

	* *.h: Harmonize ID macros so that file `foo.h' uses `FOO_H_'.
	* *.c: s/_Translator/Translator_'.

	* graph/x11/grx11.c (gr_x11_surface_init):
	s/_NET_WM_PID/NET_WM_PID/.
	* src/ftdiff.c: Replace structure names `_foo' with `foo_'.

2016-01-13  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview] Cycle through available LCD filtering.

	* src/ftview.c (status, Process_Event): Implement cycle through
	`FT_LcdFilter'.

2016-01-11  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftview.c (status, Process_Event): Update default LCD filter.

2016-01-09  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgamma] Provide alternative pattern.

	* src/ftgamma.c (do_ptrn, GammaPtrn): Implement slightly slanted
	anti-aliased lines.
	(Process_Event, event_help, main): Updated.
	* src/ftgamma.1: Updated.

2016-01-04  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgamma] Enable color.

	* src/ftcamma.c (Render_GammaGrid): Split into...
	(Render_Bitmap): ... this renderer with color controls.
	(GammaGrid): ... and this grayscale bitmap builder.
	(event_color_change): New function.
	(Process_Event, event_help, main): Updated.
	* src/ftgamma.1: Updated.

2015-12-22  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgamma] Minor refactoring.

	* src/ftgamma.c (Render_GammaGrid): Move labels from here...
	(main): ... to here.

2015-12-20  Alexei Podtelezhnikov  <apodtele@gmail.com>

	Relocate gamma grid display from [ftview] to [ftgamma].
